--- a/newpage/public/index.html
+++ b/newpage/public/index.html
@@ -30,6 +30,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/df7c5f85b4.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
